Quick fix to a 2px gap that was under the main container

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -26,7 +26,7 @@ body {
 .main {
     background-color: white;
     padding: 1rem;
-    min-height: calc(100vh - 59px - 62px);
+    min-height: calc(100vh - 59px - 60px);
 }
 
 $posStroke: 6px;
